--- a/Intelligence/Menu.xaml
+++ b/Intelligence/Menu.xaml
@@ -5,12 +5,18 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Intelligence"
         mc:Ignorable="d"
-        Title="Menu" Height="300" Width="300">
+        Title="Menu" Height="600" Width="900">
     <Grid>
-        <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="23" Margin="81,47,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="textBox1" HorizontalAlignment="Left" Height="23" Margin="81,116,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <Label x:Name="label" Content="Password" HorizontalAlignment="Left" Margin="108,90,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="textBox2" HorizontalAlignment="Left" Height="23" Margin="108,24,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+        <Label x:Name="label" Content="" HorizontalAlignment="Left" Margin="122,0,0,0" VerticalAlignment="Top"/>
+        <ListBox x:Name="ListQuest" HorizontalAlignment="Left" Height="427" Margin="10,10,0,0" VerticalAlignment="Top" Width="339"/>
+        <Button x:Name="Dellete" Content="Dellete" HorizontalAlignment="Left" Margin="10,442,0,0" VerticalAlignment="Top" Width="75" Click="Dellete_Click"/>
+        <Button x:Name="Change" Content="Change" HorizontalAlignment="Left" Margin="143,442,0,0" VerticalAlignment="Top" Width="75" Click="Change_Click"/>
+        <Button x:Name="Add" Content="Add" HorizontalAlignment="Left" Margin="274,442,0,0" VerticalAlignment="Top" Width="75" Click="Add_Click"/>
+        <StackPanel Name="Body" HorizontalAlignment="Left" Height="550" Margin="354,10,0,0" VerticalAlignment="Top" Width="528"/>
+        <Button x:Name="New" Content="New" HorizontalAlignment="Left" Margin="273,505,0,0" VerticalAlignment="Top" Width="75" Click="New_Click"/>
+        <TextBox x:Name="NewCount" HorizontalAlignment="Left" Height="23" Margin="143,505,0,0" TextWrapping="Wrap" Text="4" VerticalAlignment="Top" Width="120"/>
+        <Button x:Name="Return" Content="Return" HorizontalAlignment="Left" Margin="10,538,0,0" VerticalAlignment="Top" Width="75" Click="Return_Click"/>
+
 
     </Grid>
 </Window>
